添加redis缓存用例

--- a/guns-admin/src/main/resources/application.yml
+++ b/guns-admin/src/main/resources/application.yml
@@ -41,6 +41,12 @@ spring:
     host: localhost
     port: 6379
     password: syl19851212
+    pool:
+      max-active: 8
+      max-wait: -1
+      max-idle: 8
+      min-idle: 0
+    timeout: 0
   profiles:
     active: dev
   mvc:
