--- a/guns-thirdparty/pom.xml
+++ b/guns-thirdparty/pom.xml
@@ -91,6 +91,11 @@
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<!--<build>-->
