--- a/guns-admin/pom.xml
+++ b/guns-admin/pom.xml
@@ -124,6 +124,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+        </dependency>
 
     </dependencies>
 
