--- a/guns-parent/pom.xml
+++ b/guns-parent/pom.xml
@@ -52,6 +52,7 @@
         <dozer.version>5.5.1</dozer.version>
         <xstream.version>1.4.10</xstream.version>
         <guava.version>19.0</guava.version>
+        <redisson.version>3.6.1</redisson.version>
     </properties>
 
     <dependencyManagement>
@@ -225,6 +226,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
